--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lap2</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 
 <body>
@@ -17,7 +19,7 @@
         <div class="max-w-6xl m-auto">
             <div class="md:flex justify-between py-8 px-5">
                 <div class="font-bold text-4xl">Authority Pro</div>
-                <div class="text-2xl border-2 border-sky-500 text-sky-400 p-2 ">Menu</div>
+                <div class="text-2xl border-2 border-sky-500 text-sky-400 p-2 "> <i class='bx bx-menu'></i> Menu</div>
             </div>
             <div class="md:flex justify-between pt-12">
                 <div class="px-5">
@@ -30,7 +32,7 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-1 gap-4 md:grid-cols-3 md:gap-8 pt-8 px-5">
+            <div class="grid grid-cols-1 gap-4 md:grid-cols-3 md:gap-8 pt-8 px-5 md:px-0">
                 <div class="hover:shadow-xl transition column">
                     <div class="product-item bg-gray-100 flex justify-center item-center">
                         <img src="image 1.png" alt="">
