--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
             <p class=" text-white">Check out my fresh new course on building and growing an online audience</p>
         </header>
         <div class="max-w-6xl m-auto">
-            <div class="md:flex justify-between py-8 px-5">
-                <div class="font-bold text-4xl">Authority Pro</div>
+            <div class="md:flex justify-between py-8 px-5 md:px-0">
+                <div class="font-bold text-4xl ">Authority Pro</div>
                 <div class="text-2xl border-2 border-sky-500 text-sky-400 p-2 "> <i class='bx bx-menu'></i> Menu</div>
             </div>
             <div class="md:flex justify-between pt-12">
-                <div class="px-5">
-                    <h1 class="font-bold md:text-3xl mb-4">Shop</h1>
+                <div class="px-5 md:px-0">
+                    <h1 class="font-bold md:text-3xl text-4xl mb-4">Shop</h1>
                     <p>Showing 1–6 of 9 results</p>
                 </div>
-                <div class="px-5">
+                <div class="px-5 md:px-0">
                     <select name="" id=" " class="border-2 border-black p-4 text-lg md:text-2xl ">
                         <option value="">Default sorting</option>
                     </select>
